# Renderer

./: CMakeLists.txt  README.md  glad.c  main.cpp  mesh.cpp  mesh.h  shader.cpp  shader.h  skybox.cpp  skybox.h  texture.cpp  texture.h
res/shaders/: basic.shader  grass.shader  skybox.shader
